src/golden/functions/typeerrors/test.golden/fielderrors.fl
	object Something
		state
			String s <- 42
			Number n <- "hello"